Project almost over