@@ -7,12 +7,10 @@ import com.accenture.repository.entity.Motorbike;
 import com.accenture.repository.entity.Vehicle;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class VehicleServiceImpl implements VehicleService {
@@ -20,10 +18,7 @@ public class VehicleServiceImpl implements VehicleService {
     private static final Logger logger = LoggerFactory.getLogger(VehicleServiceImpl.class);
 
 
-    @Autowired
     CarDao carDao;
-
-    @Autowired
     MotorbikeDao motorbikeDao;
 
 
@@ -79,7 +74,7 @@ public class VehicleServiceImpl implements VehicleService {
 
     private <T extends Vehicle> List<T> filterVehicles(List<T> vehicles, Boolean active, Boolean outCarPark) {
         return vehicles.stream().filter(vehicle -> (active == null || vehicle.getActive().equals(active)) &&
-                (outCarPark == null || vehicle.getOutCarPark().equals(outCarPark))).collect(Collectors.toList());
+                (outCarPark == null || vehicle.getOutCarPark().equals(outCarPark))).toList();
     }
 
 
